<resources>
    <string name="app_name">Receipt It</string>
    <!-- right now, the app only supports CAD-->
    <string name="currency_code">$</string>
    <string name="menu_save">Save</string>

    <!--Login-->
    <string name="login_activity">Login</string>
    <string name="login_user_name">Username</string>
    <string name="login_user_password">Password</string>
    <string name="login_button">login</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_error_empty_username_or_password">Username or password should not be empty!</string>
    <string name="login_error_authentication_fail">Login fail</string>
    <string name="login_success">Login success.</string>
    <string name="login_logging_in">Logging in......</string>
    <string name="title_activity_receipt_list">Receipt List</string>

    <!--receipt list-->
    <string name="receipt_list_activity">Receipt List</string>
    <string name="receipt_list_retrieve_error">Receipt list retrieve error:</string>
    <string name="receipt_list_edit_user">Edit User Profile</string>
    <string name="receipt_list_user_info_error">User info retrieve error:</string>
    <string name="receipt_list_add_receipt">Add a new receipt</string>
    <string name="receipt_list_add_receipt_header">Select Options to Add Receipt</string>
    <string name="receipt_list_add_receipt_manually_create">Manually Create Receipt</string>
    <string name="receipt_list_add_receipt_manually_activity_title">Manually Create Receipt</string>
    <string name="receipt_list_add_receipt_camera_scan">Scan Receipt</string>
    <string name="receipt_list_add_receipt_manually_header">Receipt Information</string>
    <string name="receipt_list_add_receipt_manually_purchase_date">Purchase Date</string>
    <string name="receipt_list_add_receipt_manually_total_amount">Total Amount</string>
    <string name="receipt_list_add_receipt_manually_merchant">Merchant</string>
    <string name="receipt_list_add_receipt_manually_postcode">Post Code</string>
    <string name="receipt_list_add_receipt_manually_comment">Comment</string>
    <string name="receipt_list_add_receipt_manually_error">Create receipt manually error:</string>
    <string name="receipt_list_delete_receipt_dialog_title">Delete Receipt</string>
    <string name="receipt_list_delete_receipt_dialog_message">Are you sure to delete this receipt?</string>
    <string name="receipt_list_delete_receipt_error">Delete receipt error:</string>
    <string name="receipt_list_scan_receipt_error">Send receipt image error:</string>
    <string name="receipt_list_image_process_error">Image process error: </string>
    <string name="receipt_list_product_batch_error">Product batch create error: </string>

    <!--edit user-->
    <string name="edit_user_header">User Information</string>
    <string name="edit_user_email">Email</string>
    <string name="edit_user_first_name">First Name</string>
    <string name="edit_user_last_name">Last Name</string>
    <string name="edit_user_password">New Password</string>
    <string name="edit_user_password_confirm">Confirm New Password</string>
    <string name="edit_user_password_confirm_hint">Type the new password again</string>
    <string name="edit_user_error">Edit user information error:</string>
    <string name="edit_user_password_hint">Enter new password</string>
    <string name="edit_user_password_invalid_error">Confirm Password is not the same as New Password.</string>
    <string name="edit_user_activity_title">Edit User</string>

    <!--receipt product list-->
    <string name="receipt_product_list_activity">Receipt Product List</string>
    <string name="receipt_product_list_receipt_info_header">Receipt Information</string>
    <string name="receipt_product_list_receipt_info_merchant">Merchant</string>
    <string name="receipt_product_list_receipt_info_post_code">Post Code</string>
    <string name="receipt_product_list_receipt_info_purchased_date">Purchased Date</string>
    <string name="receipt_product_list_receipt_info_total_amount">Total Amount</string>
    <string name="receipt_product_list_receipt_info_currency">Currency Code</string>
    <string name="receipt_product_list_receipt_info_comment">Receipt Comment</string>
    <string name="receipt_product_list_product_info_description">Product Description</string>
    <string name="receipt_product_list_retrieve_error">Receipt Product list retrieved error:</string>
    <string name="receipt_product_list_receipt_edit_info_tab">Edit Receipt</string>
    <string name="receipt_product_list_receipt_product_list_tab">Product List</string>
    <string name="receipt_product_list_receipt_receipt_image_tab">Receipt Image</string>
    <string name="receipt_product_list_receipt_edit_error">Receipt edit error:</string>
    <string name="receipt_product_list_product_add_menu_title">Add a new product</string>
    <string name="receipt_product_list_product_add_activity_title">Add New Product</string>
    <string name="receipt_product_list_product_add_header">Product Information</string>
    <string name="receipt_product_list_product_add_product_name">Product Name</string>
    <string name="receipt_product_list_product_add_product_quantity">Quantity</string>
    <string name="receipt_product_list_product_add_product_price">Price</string>
    <string name="receipt_product_list_product_add_product_description">Product Description</string>
    <string name="receipt_product_list_product_add_error">Create product error:</string>
    <string name="receipt_product_list_product_delete_error">Delete product error:</string>
    <string name="receipt_product_list_delete_product_dialog_message">Are you sure to delete this product?</string>
    <string name="receipt_product_list_delete_product_dialog_title">Delete Product</string>
    <string name="receipt_product_list_product_info_price_prefix">Total:</string>
    <string name="receipt_product_list_product_info_quantity_prefix">Quantity:</string>
    <string name="receipt_product_list_delete_receipt_image">Delete current receipt image</string>
    <string name="receipt_product_list_delete_receipt_error">Delete receipt image error:</string>

    <!--product-->
    <string name="product_activity">Edit Product</string>
    <string name="product_header">Product Information</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="product_currency">Currency Code</string>
    <string name="product_description">Product Description</string>
    <string name="product_retrieve_error">Product retrieved error:</string>
    <string name="product_update_error">Product update error:</string>

    <!--retrofit-->
    <string name="network_error_unauthorized">Token unauthorized. Please login again!</string>

    <!--nav drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_nav_drawer_analysis_divider">Expense Analysis</string>
    <string name="menu_nav_drawer_compare_expense_title">Compare Expense</string>
    <string name="menu_nav_drawer_expense_report_title">Generate Expense Report</string>

    <!--expense compare-->
    <string name="expense_compare_activity_title">Expense Comparison</string>
    <string name="expense_compare_date_pick_activity_title">Expense Date Picker</string>
    <string name="expense_compare_enter_periods_header">Select Periods for Comparison</string>
    <string name="expense_compare_enter_period_1_label">Period 1</string>
    <string name="expense_compare_enter_period_2_label">Period 2</string>
    <string name="expense_compare_enter_period_3_label">Period 3</string>
    <string name="expense_compare_enter_period_4_label">Period 4</string>
    <string name="expense_compare_enter_period_5_label">Period 5</string>
    <string name="menu_expense_compare_enter_period_submit">Submit</string>
    <string name="menu_expense_submit_error">Expense retrieve error:</string>

    <!--expense report-->
    <string name="expense_report_activity_title">Expense Report</string>
    <string name="expense_report_header">Generate Report</string>
    <string name="expense_report_period_label">Period</string>
    <string name="expense_report_sort_label">Sort By</string>
    <string name="expense_report_error">Report generate error: </string>
    <string name="expense_report_total_expense_label">Total Expense: </string>
    <string-array name="expense_report_sort_spinner_list">
        <item>Price</item>
        <item>Time</item>
    </string-array>


</resources>
