<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/receipt_list_edit_user"
                android:icon="@drawable/ic_edit_user"
                android:title="@string/receipt_list_edit_user"/>
    </group>

    <item android:title="@string/menu_nav_drawer_analysis_divider">
        <menu>
            <item
                    android:id="@+id/nav_compare_report"
                    android:icon="@drawable/ic_compare_expense"
                    android:title="@string/menu_nav_drawer_compare_expense_title"/>
            <item
                    android:id="@+id/nav_generate_report"
                    android:icon="@drawable/ic_expense_report"
                    android:title="@string/menu_nav_drawer_expense_report_title"/>
        </menu>
    </item>

</menu>
