<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewmodel"
                type="com.receiptit.login.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".login.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tl_username_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_left"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/login_user_name">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_username"
                    android:text="@{viewmodel.username}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tl_password_layout"
                app:layout_constraintTop_toBottomOf="@id/tl_username_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_left"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/login_user_password">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_password"
                    android:inputType="textPassword"
                    android:text="@{viewmodel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login_button"
                app:layout_constraintTop_toBottomOf="@id/tl_password_layout"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/margin_left"
                android:text="@string/login_button"/>

        <CheckBox
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/cb_remember_me"
                  android:layout_marginStart="@dimen/margin_left"
                  app:layout_constraintTop_toBottomOf="@id/tl_password_layout"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:text="@string/login_remember_me"
                  android:checked="@{viewmodel.rememberMe}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>