<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_tiny">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_receipt_product_list_receipt_info_merchant_label"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.1"
                  app:layout_constraintTop_toTopOf="parent"
                  android:textSize="16sp"
                  android:text="@string/receipt_product_list_receipt_info_merchant"
                  tools:text="test"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ed_receipt_product_list_receipt_info_merchant_value"
                  app:layout_constraintLeft_toLeftOf="@id/tv_receipt_product_list_receipt_info_merchant_label"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.8"
                  app:layout_constraintBottom_toBottomOf="@id/tv_receipt_product_list_receipt_info_merchant_label"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_receipt_product_list_receipt_info_postcode_label"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.1"
                  app:layout_constraintTop_toBottomOf="@id/tv_receipt_product_list_receipt_info_merchant_label"
                  android:textSize="16sp"
                  android:text="@string/receipt_product_list_receipt_info_post_code"
                  tools:text="test"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ed_receipt_product_list_receipt_info_postcode_value"
                  app:layout_constraintLeft_toLeftOf="@id/tv_receipt_product_list_receipt_info_postcode_label"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.8"
                  app:layout_constraintBottom_toBottomOf="@id/tv_receipt_product_list_receipt_info_postcode_label"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_receipt_product_list_receipt_info_purchase_date_label"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.1"
                  app:layout_constraintTop_toBottomOf="@id/tv_receipt_product_list_receipt_info_postcode_label"
                  android:textSize="16sp"
                  android:text="@string/receipt_product_list_receipt_info_purchased_date"
                  tools:text="test"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ed_receipt_product_list_receipt_info_purchase_date_value"
                  app:layout_constraintLeft_toLeftOf="@id/tv_receipt_product_list_receipt_info_postcode_label"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.8"
                  app:layout_constraintBottom_toBottomOf="@id/tv_receipt_product_list_receipt_info_purchase_date_label"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_receipt_product_list_receipt_info_total_amount_label"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.1"
                  app:layout_constraintTop_toBottomOf="@id/tv_receipt_product_list_receipt_info_purchase_date_label"
                  android:textSize="16sp"
                  android:text="@string/receipt_product_list_receipt_info_total_amount"
                  tools:text="test"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ed_receipt_product_list_receipt_info_total_amount_value"
                  app:layout_constraintLeft_toLeftOf="@id/tv_receipt_product_list_receipt_info_postcode_label"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.8"
                  app:layout_constraintBottom_toBottomOf="@id/tv_receipt_product_list_receipt_info_total_amount_label"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_receipt_product_list_receipt_info_currency_label"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.1"
                  app:layout_constraintTop_toBottomOf="@id/tv_receipt_product_list_receipt_info_total_amount_label"
                  android:textSize="16sp"
                  android:text="@string/receipt_product_list_receipt_info_currency"
                  tools:text="test"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ed_receipt_product_list_receipt_info_currency_value"
                  app:layout_constraintLeft_toLeftOf="@id/tv_receipt_product_list_receipt_info_postcode_label"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintHorizontal_bias="0.8"
                  app:layout_constraintBottom_toBottomOf="@id/tv_receipt_product_list_receipt_info_currency_label"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      app:layout_constraintLeft_toLeftOf="@id/tv_receipt_product_list_receipt_info_currency_label"
                      app:layout_constraintTop_toBottomOf="@id/tv_receipt_product_list_receipt_info_currency_label">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_receipt_product_list_receipt_info_comment_label"
                      android:textSize="16sp"
                      android:text="@string/receipt_product_list_receipt_info_comment"
                      tools:text="test"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/ed_receipt_product_list_receipt_info_comment_value"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>