<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin_small">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintHorizontal_bias="0.05"
              app:layout_constraintVertical_bias="0.05"
              android:text="@string/receipt_list_add_receipt_header"
              android:id="@+id/tv_receipt_list_add_receipt_header"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <View android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.9"
          android:layout_height="1dp"
          android:id="@+id/v_receipt_list_add_user_divider"
          android:background="@android:color/black"
          app:layout_constraintLeft_toLeftOf="@id/tv_receipt_list_add_receipt_header"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginEnd="@dimen/margin_medium"
          app:layout_constraintTop_toBottomOf="@id/tv_receipt_list_add_receipt_header"
          android:layout_marginTop="@dimen/margin_small"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/receipt_list_add_receipt_manually_create"
              android:drawableStart="@drawable/ic_add_receipt"
              android:drawablePadding="@dimen/margin_small"
              android:layout_marginTop="@dimen/margin_small"
              app:layout_constraintTop_toBottomOf="@id/v_receipt_list_add_user_divider"
              app:layout_constraintLeft_toLeftOf="@id/tv_receipt_list_add_receipt_header"
              android:id="@+id/tv_receipt_list_add_receipt_manually_create"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/receipt_list_add_receipt_camera_scan"
              android:drawableStart="@drawable/ic_camera"
              android:id="@+id/tv_receipt_list_add_receipt_scan_receipt"
              android:drawablePadding="@dimen/margin_small"
              android:layout_marginTop="@dimen/margin_small"
              app:layout_constraintTop_toBottomOf="@id/tv_receipt_list_add_receipt_manually_create"
              app:layout_constraintLeft_toLeftOf="@id/tv_receipt_list_add_receipt_manually_create"/>

    <ImageView  android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toRightOf="@id/tv_receipt_list_add_receipt_scan_receipt"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.8"
                 app:layout_constraintTop_toBottomOf="@id/tv_receipt_list_add_receipt_scan_receipt"
                 android:src="@drawable/ic_close"
                 android:id="@+id/iv_receipt_list_add_receipt_close"/>

</androidx.constraintlayout.widget.ConstraintLayout>
