<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/iv_receipt_product_list_product_info_product_icon"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintHorizontal_bias="0.1"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               android:src="@drawable/ic_receipt_product_list_product"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toRightOf="@id/iv_receipt_product_list_product_info_product_icon"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintHorizontal_bias="0.05"
              app:layout_constraintTop_toTopOf="@id/iv_receipt_product_list_product_info_product_icon"
              android:id="@+id/tv_receipt_product_list_product_info_product_name"
              android:textSize="16sp"
              android:textStyle="bold"
              android:ellipsize = "end"
              android:maxLines="1"
              app:layout_constraintWidth_percent="0.3"
              tools:text="Test"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tv_receipt_product_list_product_info_quantity_prefix"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintHorizontal_bias="0.65"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              android:text="@string/receipt_product_list_product_info_quantity_prefix"
              app:layout_constraintVertical_bias="0.3"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toRightOf="@id/tv_receipt_product_list_product_info_quantity_prefix"
              app:layout_constraintTop_toTopOf="@id/tv_receipt_product_list_product_info_quantity_prefix"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintHorizontal_bias="0.05"
              android:id="@+id/tv_receipt_product_list_product_info_quantity"
              android:ellipsize = "end"
              android:maxLines="1"
              app:layout_constraintWidth_percent="0.2"
              tools:text="Test"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:id="@+id/tv_receipt_product_list_product_info_price"
              app:layout_constraintLeft_toRightOf="@id/tv_receipt_product_list_product_info_currency"
              app:layout_constraintTop_toTopOf="@id/tv_receipt_product_list_product_info_currency"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintHorizontal_bias="0.05"
              android:ellipsize = "end"
              android:maxLines="1"
              app:layout_constraintWidth_percent="0.2"
              tools:text="Test"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tv_receipt_product_list_product_info_price_prefix"
              android:text="@string/receipt_product_list_product_info_price_prefix"
              app:layout_constraintLeft_toLeftOf="@id/tv_receipt_product_list_product_info_quantity_prefix"
              app:layout_constraintTop_toBottomOf="@id/tv_receipt_product_list_product_info_quantity_prefix"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintVertical_bias="0.1"/>


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tv_receipt_product_list_product_info_currency"
              app:layout_constraintTop_toTopOf="@id/tv_receipt_product_list_product_info_price_prefix"
              app:layout_constraintLeft_toRightOf="@id/tv_receipt_product_list_product_info_price_prefix"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintHorizontal_bias="0.05"
              android:text="@string/currency_code"
              tools:text="@string/currency_code"/>

    <View android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.9"
          android:layout_height="1dp"
          android:id="@+id/v_receipt_product_list_product_info_currency_divider"
          android:background="@android:color/darker_gray"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_receipt_product_list_product_info_currency"
          android:layout_marginTop="@dimen/margin_small"/>


</androidx.constraintlayout.widget.ConstraintLayout>